feat/Swagger docs for Search By Name api
