# backend/api/handlers.go
@@ -64,6 +64,14 @@ func (ct *Controller) searchRecord(c *gin.Context) {
 	c.JSON(200, data)
 }
 
+// @Summary Searches Researchers by Name
+// @Description Searches Researchers by Name
+// @Tags search
+// @Accept  json
+// @Produce  json
+// @Param name query string true "Researcher Name"
+// @Success 200 {object} model.ResearcherResults
+// @Router /api/searchResearchersByName [get]
 func (ct *Controller) searchResearchersByName(c *gin.Context) {
 	name, ok := c.GetQuery("name")
 	if !ok {
